--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/jesus-chacon/next-js-sample/issues"
   },
-  "homepage": "https://github.com/jesus-chacon/next-js-sample#readme"
+  "homepage": "https://github.com/jesus-chacon/next-js-sample#readme",
+  "dependencies": {
+    "next": "^6.0.3",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  }
 }
