--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "next-js-sample",
-  "version": "1.0.0",
-  "description": "This is a repository for include a next.js app with a Express server",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jesus-chacon/next-js-sample.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jesus-chacon/next-js-sample/issues"
-  },
-  "homepage": "https://github.com/jesus-chacon/next-js-sample#readme",
-  "dependencies": {
-    "next": "^6.0.3",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
-  }
+    "name": "next-js-sample",
+    "version": "1.0.0",
+    "description": "This is a repository for include a next.js app with a Express server",
+    "main": "index.js",
+    "scripts": {
+        "dev": "next",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/jesus-chacon/next-js-sample.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/jesus-chacon/next-js-sample/issues"
+    },
+    "homepage": "https://github.com/jesus-chacon/next-js-sample#readme",
+    "dependencies": {
+        "next": "^6.0.3",
+        "react": "^16.4.0",
+        "react-dom": "^16.4.0"
+    }
 }
