--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/jesus-chacon/next-js-sample#readme",
     "dependencies": {
+        "express": "^4.16.3",
         "next": "^6.0.3",
         "react": "^16.4.0",
         "react-dom": "^16.4.0"
