--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/jesus-chacon/next-js-sample#readme",
     "dependencies": {
         "express": "^4.16.3",
+        "isomorphic-unfetch": "^2.0.0",
         "next": "^6.0.3",
         "react": "^16.4.0",
         "react-dom": "^16.4.0"
