--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "scripts": {
         "dev": "next",
         "server": "node server.js",
+        "build": "next build",
+        "start": "NODE_ENV=production node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
